--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,28 @@
 .friendMessage {
-
+    
 }
 
 .friendImageAndText {
-
+    
 }
 
 .friendImageAndText img {
-
+    
 }
 
 .friendText {
+   
+
+    
 
 }
 
-.friendText:after {
-
-}
+.friendText:after {}
 
 .friendName {
-
+    
 }
 
-.friendMessageText {
+.friendMessageText {}
 
-}
-
-.friendTime {
-
-}
+.friendTime {}
