--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,19 @@
-.message {
+.message {}
 
-}
-
-.imageAndText {
-
-}
+.imageAndText {}
 
 .imageAndText img {
-
+    
 }
 
 .text {
-
+    
 }
 
-.text:after {
+.text:after {}
 
-}
+.name {}
 
-.name {
+.messageText {}
 
-}
-
-.messageText {
-
-}
-
-.time {
-
-}
+.time {}
